Fix all movies heading spacing.

--- a/src/css/AllMovies.scss
+++ b/src/css/AllMovies.scss
@@ -15,3 +15,15 @@
   margin-left: 20%;
   // padding-left: 2%;
 }
+
+h2 {
+  display: flex;
+  margin-right: 300px;
+}
+
+.input--filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
